--- a/source/goodway/goodway-web2/src/main/resources/templates/question/new.html
+++ b/source/goodway/goodway-web2/src/main/resources/templates/question/new.html
@@ -34,12 +34,12 @@
                 contextMenu: true,
                 columns: [
                 	{data: 'category'},
-                    {data: 'question_name'},
+                    {data: 'question'},
                     {data: 'ask_person'},
                     {data: 'ask_date'},
                     {data: 'answer'},
-                    {data: 'respondent'},
-                    {data: 'day_responded'},
+                    {data: 'answer_person'},
+                    {data: 'answer_date'},
                     {data: 'status'}
                   ]
               });
